implement new commands

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -50,6 +50,7 @@
 \newcommand{\ongoing}{~\textrightarrow~}
 \newcommand{\lineitem}[2][]{\subsection*{\textbf{#2}\hfill #1}}
 \newcommand{\subline}[2][]{\subsubsection*{\textit{#2}\qquad #1}}
+\newcommand{\brunswick}{\qquad \normalfont{Brunswick, ME, U.S.A.}}
 
 \begin{document}
 % NAME
