--- a/sect/education.tex
+++ b/sect/education.tex
@@ -6,6 +6,6 @@ Applications of the uranium decay systems in deep time and the Quaternary: chron
 
 \quad Committee: Profs. Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
 
-\lineitem[(Brunswick, ME) \hspace{9cm} 2014]{Bowdoin College}
+\lineitem[2014]{Bowdoin College \brunswick}
 \subline{Bachelor of Arts:}
 Earth and Oceanographic Science with Honors, minor in Classics (\emph{Summa cum Laude}, $\Phi$BK Society)
