--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -1,6 +1,6 @@
 \section*{OUTREACH \& PUBLIC SERVICE}
 
-\subsection*{\textbf{Montshire Museum of Science} \hfill 2022\ongoing}
+\lineitem[2022\ongoing]{Montshire Museum of Science}
 \subline{Guest Scientist}
 \begin{itemize}
 \item Lead and assist educational activities within the museum.
@@ -8,7 +8,7 @@
 \item Develop programming focused on planetary science topics.
 \end{itemize}
 
-\subsection*{\textbf{Santa Cruz Museum of Natural History} \hfill 2018 – 2022}
+\lineitem[2018 -- 2022]{Santa Cruz Museum of Natural History}
 \subline{Volunteer Scientist}
 \begin{itemize}
 	\item Created educational content and hosted activities at monthly museum events.
@@ -16,7 +16,7 @@
 	Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
 \end{itemize}
 
-\subsection*{\textbf{Skype a Scientist} \hfill 2019\ongoing}
+\lineitem[2019\ongoing]{Skype a Scientist}
 \subline{Volunteer Scientist}
 \begin{itemize}
 	\item Prepare educational content and host video calls with elementary and secondary school classrooms.
@@ -31,7 +31,7 @@
 	\item Organized and implemented outreach events centered on promoting underrepresented groups in the geosciences and cultivating a culture of inclusivity within the department.
 \end{itemize}
 
-\subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 -- 2016}
+\lineitem[2015 -- 2016]{Peary-MacMillan Arctic Museum \brunswick}
 \subline[2015 -- 2016]{Curatorial Intern}
 \begin{itemize}
 	\item Developed outreach programming and exhibit content.
@@ -44,7 +44,7 @@
 	\item Led museum tours for all age groups of museum exhibits and interactive collections.
 \end{itemize}
 
-\subsection*{\textbf{Museum of the Rockies} \hspace{15pt} Bozeman, MT, U.S.A. \hfill 2015}
+\lineitem[2015]{Museum of the Rockies \qquad \normalfont{Bozeman, MT, U.S.A.}}
 \textit{Security Volunteer}
 \begin{itemize}
 	\item Answered visitors' questions and facilitated interpretive discussions about natural history exhibits.
