--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -45,14 +45,14 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 	2017--18 & Paul Colosi
 \end{tabular}
 
-\subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A.}
+\lineitem{Bowdoin College \brunswick}
 \subline{Laboratory Teaching Assistant}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 Fall 2012, 2013 & \textit{Investigating Earth}\\
 Fall 2013 & \textit{Marine Biogeochemistry}
 \end{tabular}
 
-\subsection*{\textbf{Bozeman \& Livingston Public Schools} \hspace{15pt} MT, U.S.A. \hfill 2015}
+\lineitem[2015]{Bozeman \& Livingston Public Schools \qquad \normalfont{MT, U.S.A.}}
 \textit{Substitute Teacher}
 \begin{itemize}
 	\item Instructor and paraprofessional in K-12 classrooms.
