add nc reviewer

--- a/sect/service.tex
+++ b/sect/service.tex
@@ -61,7 +61,7 @@ Under the advisorship of lab director Prof. Terry Blackburn, I was partially res
 
 \vspace{2ex}
 \begin{hangparas}{5ex}{1}
-	\textbf{Reviewer for:} \textit{Geochronology}, \textit{Geology}
+	\textbf{Reviewer for:} \textit{Geochronology}, \textit{Geology}, \textit{Nature Communications}
 
 	\vspace{2ex}
 	\textbf{Society Affiliations:} Meteoritical Society, American Astronomical Society, Geochemical Society, National Association of Geoscience Teachers, Geological Society of America, American Geophysical Union.
