add submitted and update gpm paper

--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -1,10 +1,11 @@
 \section*{PUBLICATIONS}
 \hfill* denotes student author
-\newcommand{\inprep}[1]{\textit{in prep, #1}}
+\newcommand{\inprep}[1]{in prep, \textit{#1}}
+\newcommand{\submitted}[1]{submitted, \textit{#1}}
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
 %item \ghedwards \&\ G. Piccione, M. Gomez. (\textit{in prep}). Viewership patterns of a virtual geoscience outreach program. \textit{Journal of Geoscience Education}.
 \item[\dots] \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \inprep{Chemical Geology}.
-\item[\dots] \ghedwards, C.B. Keller, C. Stewart*, E.R. Newton. An early giant planet instability recorded in asteroidal meteorites, \inprep{Nature Astronomy}.
+\item[\dots] \ghedwards, C.B. Keller, C. Stewart*, E.R. Newton. An early giant planet instability recorded in asteroidal meteorites, \submitted{Nature Astronomy}.
 \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. 2022. Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}. \href{https://www.science.org/doi/10.1126/sciadv.abp9329}{doi:~10.1126/sciadv.abp9329}.
 \item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder*, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi:~10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
 \item \ghedwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \textit{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi:~10.1126/sciadv.aay8641}
