add moosilauke outreach event

--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -8,6 +8,11 @@
 \item Develop programming focused on planetary science topics.
 \end{itemize}
 
+\lineitem[2023]{Moosilauke Ravine Lodge}
+\begin{itemize}
+	\item Guest scientist \& speaker for Perseid meteor shower. 
+\end{itemize}
+
 \lineitem[2018 -- 2022]{Santa Cruz Museum of Natural History}
 \subline{Volunteer Scientist}
 \begin{itemize}
