add new appointments, teaching, publications

--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -1,7 +1,13 @@
-\section*{CURRENT APPOINTMENT}
+\section*{APPOINTMENTS}
 \lineitem[2021\ongoing]{Dartmouth College}
+
 \subline{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
 
 ``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
 
-~Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth R. Newton (Physics \&\ Astronomy)
+~~~Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth R. Newton (Physics \&\ Astronomy)
+
+%%%%-----------------------
+
+\subline{Lecturer} 
+Department of Physics \& Astronomy
