--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,8 +1,14 @@
 \section*{TEACHING \&\ MENTORING}
 \lineitem{Dartmouth College}
+\subline{Lecturer (Instructor of Record)}
+\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+	Fall 2023 & Exploring the Universe
+	\end{tabular}
+
 \subline{Guest Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
-Spring 2022 & Igneous and Metamorphic Petrology
+	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section \\
+	Spring 2022 & Igneous and Metamorphic Petrology
 \end{tabular}
 
 \subline[2022 -- 2023]{Research Group Leader}
