--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -1,4 +1,4 @@
-\section*{10 SELECTED CONFERENCE ABSTRACTS}
+\section*{TEN SELECTED CONFERENCE ABSTRACTS}
 
 More comprehensive lists of abstracts are available on the \href{https://ui.adsabs.harvard.edu/public-libraries/-tel6KyoTUeLAGPFsPO0dQ}{Astrophysical Data System} or \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}.
 
