add amount to aapf

--- a/sect/funding.tex
+++ b/sect/funding.tex
@@ -2,7 +2,7 @@
 \lineitem{Current~/~Active}
 \begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
 2021--24 & National Science Foundation --- Astronomy \&\ Astrophysics Postdoctoral Fellowship\\
-& \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591}{Award \#2102591}
+& \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591}{Award \#2102591} --- \$\,310,\,000
 \end{tabular}
 
 \lineitem{Prior~/~Inactive}
