update for job apps

--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -1,5 +1,5 @@
 \section*{PUBLICATIONS}
-\hfill* denotes student author
+\hfill* mentored student author
 \newcommand{\inprep}[1]{in prep, \textit{#1}}
 \newcommand{\submitted}[1]{submitted, \textit{#1}}
 \newcommand{\inreview}[1]{in review, \textit{#1}}
