--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -1,7 +1,8 @@
 %%%%%%%%
 \newcommand{\invitedtalk}[3]{\textbf{#1} $|$ {#2} \\ Title:~\textit{#3}}
+\newcommand{\outreachtalk}[3]{\textbf{#1} $|$ {#2} \\ \quad \textit{#3}}
 %%%%%%%%
-\section*{INVITED TALKS}
+\section*{INVITED ACADEMIC TALKS}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
   \item \invitedtalk{Goldschmidt Conference (Lyon)}{Invited Keynote, 12 July 2023}{Data \& computational science for Earth \& planetary history: lessons from the terrestrial archive}
@@ -12,4 +13,15 @@
   \item \invitedtalk{Massachusetts Institute of Technology}{Planetary Lunch Seminar, 3 May 2022}{The early history of the LL chondrite parent planetesimal}
   \item \invitedtalk{Princeton University}{Environmental Geology and Geochemistry Seminar, 31 Mar 2022}{Peering beneath the northern Laurentide ice sheet during the last glacial maximum}
   
+\end{etaremune}
+
+\section*{INVITED OUTREACH \& COMMUNITY TALKS}
+
+\begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
+  
+  \item \outreachtalk{Moosilauke Ravine Lodge}{11 August, 2023}{Guest scientist \& speaker for Perseid meteor shower. Public talk for families.}  
+  
+  \item \outreachtalk{Richmond Middle School}{5 April, 2023 (Hanover, NH)}{Guest scientist presentation for all sixth grade classes.}
+  
+  \item \outreachtalk{Montshire Museum of Science}{21 Januray, 2023}{Public talk on meteorites at ``Astronomy Day'' event (middle to high school learning level).}
 \end{etaremune}
