--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,13 +1,14 @@
 \section*{TEACHING \&\ MENTORING}
 \lineitem{Dartmouth College}
-\subline{Lecturer (Instructor of Record)}
+\subline{Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
-	Fall 2023 & Exploring the Universe
+	Fall 2023 & Exploring the Universe (\emph{Instructor of Record})\\
+	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section (\emph{Co-Instructor})
 	\end{tabular}
 
 \subline{Guest Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
-	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section \\
+
 	Spring 2022 & Igneous and Metamorphic Petrology
 \end{tabular}
 
