--- a/sect/service.tex
+++ b/sect/service.tex
@@ -32,7 +32,7 @@ Analytical Experience:
 	\begin{itemize} [label={}]
 		\item \textit{Expert:} TIMS
 		\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
-		\item \textit{Limited:} ICP-OES, XRF, XRD
+		\item \textit{Limited:} IRMS, ICP-OES, XRF, XRD
 	\end{itemize} 
 \subline[\hfill 2016 -- 2021]{W.M. Keck Isotope Facility, UC Santa Cruz}
 Under the advisorship of lab director Prof. Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
