--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -12,7 +12,7 @@
     \item[\dots] \ghedwards, G. Piccione, T. Blackburn,  S. Tulaczyk. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \inprep{Chemical Geology}.
     %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
     \item[\dots] \ghedwards, C.B. Keller, E.R. Newton, C.W. Stewart*. An early giant planet instability recorded in asteroidal meteorites, \inreview{Nature Astronomy}. \arxiv{2309.10906}. \press{https://astrobites.org/2023/09/25/meteorites-planet-migration/}{Astrobites}
-    \item M.A.~Thompson, M.~Telus, \ghedwards, L.~Schaefer, J.~Dhaliwal, B.~Dreyer, J.J.~Fortney, K.~Kim. 2023. Outgassing composition of the Murchison meteorite: implications for volatile depletion of planetesimals and interior-atmosphere connections for terrestrial exoplanets, \inpress{Planetary Science Journal}. 
+    \item M.A.~Thompson, M.~Telus, \ghedwards, et al. 2023. Outgassing composition of the Murchison meteorite: implications for volatile depletion of planetesimals and interior-atmosphere connections for terrestrial exoplanets, \emph{Planetary Science Journal}. \doi{10.3847/PSJ/acf760}. 
     \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. 2022. Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}. \doi{10.1126/sciadv.abp9329}.
     \item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder*, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \doi{10.1038/s41586-020-2484-5}. \press{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}
     \item \ghedwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \textit{Science Advances} (6), eaay8641. \doi{10.1126/sciadv.aay8641}
