include scmnh paper, A1

--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -11,7 +11,7 @@
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
     \item[\dots] \ghedwards, G. Piccione, T. Blackburn,  S. Tulaczyk. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \inprep{Chemical Geology}.
-    %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
+    \item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
     \item[\dots] \ghedwards, C.B. Keller, E.R. Newton, C.W. Stewart*. An early giant planet instability recorded in asteroidal meteorites, \inreview{Nature Astronomy}. \arxiv{2309.10906}. \press{https://astrobites.org/2023/09/25/meteorites-planet-migration/}{Astrobites}
     \item M.A.~Thompson, M.~Telus, \ghedwards, et al. 2023. Outgassing composition of the Murchison meteorite: implications for volatile depletion of planetesimals and interior-atmosphere connections for terrestrial exoplanets, \pub{Planetary Science Journal}{4}. \doi{10.3847/PSJ/acf760}. \arxiv{2310.02028}.
     \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. 2022. Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \pub{Science Advances}{8}. \doi{10.1126/sciadv.abp9329}.
