--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -2,8 +2,9 @@
 \lineitem{Dartmouth College}
 \subline{Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+	Spring 2024 & [\emph{Upcoming}] Exploration of the Solar System (\emph{Instructor of Record})\\
 	Fall 2023 & Exploring the Universe (\emph{Instructor of Record})\\
-	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section (\emph{Co-Instructor})
+	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section (\emph{Co-Instructor})\\
 	\end{tabular}
 
 \subline{Guest Lecturer}
