--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -15,6 +15,7 @@
 \usepackage{enumitem} % for itemize and enumerate layout control
 	\setlist[itemize]{noitemsep, topsep=0pt, leftmargin=5ex}
 \usepackage{hanging} % Hanging paragraphs for in-line lists.
+\usepackage{booktabs}
 \usepackage{hyperref} 
 \usepackage{xcolor} \definecolor{linkcolor}{rgb}{0.0, 0.25, 0.42} \hypersetup{colorlinks=true, urlcolor=linkcolor} %set link color to a lovely indigo dye.
 
@@ -60,7 +61,7 @@
 \end{center}
 
 % ADDRESS, INFO
-\textbf{Postdoctoral Fellow} \hfill \href{https://grahamedwards.github.io}{grahamedwards.github.io} \\
+\textbf{Postdoctoral Fellow, Lecturer} \hfill \href{https://grahamedwards.github.io}{grahamedwards.github.io} \\
 Earth Sciences, Physics \& Astronomy \hfill Graham.H.Edwards{\small @dartmouth.edu} \\
 Dartmouth College \hfill +1~920~559~2279  \\
 Hanover, NH, U.S.A.	\hfill \textit{Office:}~209 Fairchild Hall
