add ads fall talk

--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -5,6 +5,7 @@
 \section*{INVITED ACADEMIC TALKS}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
+  \item \invitedtalk{Center for Astrophysics $|$ Harvard \& Smithsonian }{Astrophysics Data System, 25 October 2023}{Reconstructing and deconstructing ice sheets from the ground up}
   \item \invitedtalk{Goldschmidt Conference (Lyon)}{Invited Keynote, 12 July 2023}{Data \& computational science for Earth \& planetary history: lessons from the terrestrial archive}
   \item \invitedtalk{Center for Astrophysics $|$ Harvard \& Smithsonian }{Astrophysics Data System, 13 June 2023}{Transcribing the cosmochemical codex}
   \item \invitedtalk{Colby College}{Geology Seminar, 17 Mar 2023}{In the light of a newborn sun: transcribing the first chapters of our solar system from meteorites}
