--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -4,7 +4,7 @@ More comprehensive lists of abstracts are available on the \href{https://ui.adsa
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
   
-  \item \ghedwards, C.B. Keller, E.R. Newton, C. Stewart. 2023. [Talk]: Disk-driven migration of Jupiter: support from meteorite thermochronology. \textit{Goldschmidt Conference}, Lyon, FR. 
+  \item \ghedwards, C.B. Keller, E.R. Newton, C. Stewart. 2023. [Talk]: Disk-driven migration of Jupiter: support from meteorite thermochronology. \textit{Goldschmidt Conference}, Lyon, FR. \doi{10.7185/gold2023.18450}
   
   \item \ghedwards, C.B. Keller,  E.R. Newton, C. Stewart. 2023. [iPoster]: Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
  
