--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -7,7 +7,7 @@
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
   \item \invitedtalk{Colby College}{Invited Research Talk, 1 December 2023}{Reconstructing and deconstructing ice sheets from the ground up}
   \item \invitedtalk{Center for Astrophysics $|$ Harvard \& Smithsonian }{Astrophysics Data System, 25 October 2023}{Reconstructing and deconstructing ice sheets from the ground up}
-  \item \invitedtalk{Goldschmidt Conference (Lyon)}{Invited Keynote, 12 July 2023}{Data \& computational science for Earth \& planetary history: lessons from the terrestrial archive}
+  \item \invitedtalk{Goldschmidt Conference (Lyon)}{Invited Keynote, 12 July 2023 \qquad [\href{https://doi.org/10.7185/gold2023.20337}{abstract}]}{Data \& computational science for Earth \& planetary history: lessons from the terrestrial archive}
   \item \invitedtalk{Center for Astrophysics $|$ Harvard \& Smithsonian }{Astrophysics Data System, 13 June 2023}{Transcribing the cosmochemical codex}
   \item \invitedtalk{Colby College}{Geology Seminar, 17 Mar 2023}{In the light of a newborn sun: transcribing the first chapters of our solar system from meteorites}
   \item \invitedtalk{Thayer School of Engineering, Dartmouth College}{Ice+Climate Seminar Series, 10 Feb 2023}{A terrestrial record of Heinrich events}
