add astrobio guest lecture

--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -9,7 +9,7 @@
 
 \subline{Guest Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
-
+	Winter 2024 & Astrobiology\\
 	Spring 2022 & Igneous and Metamorphic Petrology
 \end{tabular}
 
