akron and dartmouth search

--- a/sect/service.tex
+++ b/sect/service.tex
@@ -9,7 +9,7 @@
 
 \lineitem{Departmental Service}
 \subline{Department of Earth Sciences, Dartmouth}
-Postdoc Representative for Faculty Search Committee \hfill 2023
+Postdoc Representative for Faculty Search Committee (2 searches) \hfill 2023, 2024
 \begin{itemize}
 	\item Organized meetings with candidates and departmental postdocs.
 	\item Compiled and presented quantitative and qualitative feedback to Search Committee.
