--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -5,6 +5,8 @@
 \section*{INVITED ACADEMIC TALKS}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
+  \item \invitedtalk{The University of Akron}{Invited Research Talk, 6 February 2024}{Reconstructing and deconstructing ice sheets from the ground up}
+  \item \invitedtalk{Trinity University}{Invited Research Talk, 29 January 2024}{Reconstructing and deconstructing ice sheets from the ground up}
   \item \invitedtalk{Colby College}{Invited Research Talk, 1 December 2023}{Reconstructing and deconstructing ice sheets from the ground up}
   \item \invitedtalk{Center for Astrophysics $|$ Harvard \& Smithsonian }{Astrophysics Data System, 25 October 2023}{Reconstructing and deconstructing ice sheets from the ground up}
   \item \invitedtalk{Goldschmidt Conference (Lyon)}{Invited Keynote, 12 July 2023 \qquad [\href{https://doi.org/10.7185/gold2023.20337}{abstract}]}{Data \& computational science for Earth \& planetary history: lessons from the terrestrial archive}
