--- a/sect/service.tex
+++ b/sect/service.tex
@@ -5,6 +5,7 @@
 \begin{itemize}
 	\item Co-chair of primary community advising body for the NSF-funded \href{https://www.iedadata.org/}{IEDA$^2$} data facility.
 	\item Guide approaches to promote and ensure access, preservation, and re-usability of Earth system data.
+	\item Write annual recommendation reports based on advisory board discussions. 
 \end{itemize}
 
 \lineitem{Departmental Service}
