paper and woodstock presentation

--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -22,10 +22,12 @@
 \section*{INVITED OUTREACH \& COMMUNITY TALKS}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
+
+  \item \outreachtalk{Woodstock Union Middle School}{29 February, 2024}{Guest scientist presentation and discussion with grade 8 science students.}
   
   \item \outreachtalk{Moosilauke Ravine Lodge}{11 August, 2023}{Guest scientist \& speaker for Perseid meteor shower. Public talk for families.}  
   
-  \item \outreachtalk{Richmond Middle School}{5 April, 2023 (Hanover, NH)}{Guest scientist presentation for all sixth grade classes.}
+  \item \outreachtalk{Richmond Middle School}{5 April, 2023 (Hanover, NH)}{Guest scientist presentation for all grade 6 students.}
   
   \item \outreachtalk{Montshire Museum of Science}{21 Januray, 2023}{Public talk on meteorites at ``Astronomy Day'' event (middle to high school learning level).}
 \end{etaremune}
