spring, post-eclipse updates

--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -1,5 +1,9 @@
 \section*{APPOINTMENTS}
-\lineitem[2021\ongoing]{Dartmouth College}
+
+\lineitem[Summer 2024\ongoing]{Trinity University}
+\subline{Assistant Professor of Earth \& Environmental Geosciences}
+
+\lineitem[2021 -- Summer 2024]{Dartmouth College}
 
 \subline{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
 
