--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -23,6 +23,11 @@
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex,]
 
+  \item \outreachtalk{Dartmouth College}{8 April, 2024}{Featured scientist for eclipse-viewing in Hanover, NH.} 
+  (\href{https://home.dartmouth.edu/news/2024/04/views-green-april#:~:text=People%20who%20came%20to%20view%20the%20eclipse%20took%20photographs}{Photo from event})
+
+  \item \outreachtalk{Montshire Museum of Science}{7 April, 2024}{Guest scientist presentation on the science of eclipses.}
+  
   \item \outreachtalk{Woodstock Union Middle School}{29 February, 2024}{Guest scientist presentation and discussion with grade 8 science students.}
   
   \item \outreachtalk{Moosilauke Ravine Lodge}{11 August, 2023}{Guest scientist \& speaker for Perseid meteor shower. Public talk for families.}  
