submission updates, etc

--- a/Edwards-CV.tex
+++ b/Edwards-CV.tex
@@ -105,6 +105,10 @@ Hanover, NH, U.S.A.	\hfill \textit{Office:}~209 Fairchild Hall
 \input{sect/awards.tex}
 %\vspace*{2em}
 
+% AWARDS & HONORS
+\input{sect/media.tex}
+%\vspace*{2em}
+
 % CONFERENCE TALK/POSTER
 \input{sect/abstracts.tex}
 %\vspace*{2em}
