--- a/sect/media.tex
+++ b/sect/media.tex
@@ -1,3 +1,9 @@
-%% A tentative space to include media content that I contribute to...
+\section*{POPULAR MEDIA}
 
-https://www.science.org/content/article/giant-planets-ran-amok-soon-after-solar-system-s-birth 
+\begin{tabular}{l l l} 
+2024 & Sky \& Telescope & \href{https://skyandtelescope.org/astronomy-news/meteorites-tighten-timeline-for-giant-planets-movement-through-the-solar-system/}{Meteorites tighten timeline for giant planets' movement \dots}
+\\
+2024 & Science Magazine & \href{https://www.science.org/content/article/giant-planets-ran-amok-soon-after-solar-system-s-birth}{Giant planets ran amok soon after solar system's birth}
+\\
+2020 & National Geographic & \href{https://www.nationalgeographic.com/science/article/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought}{Biggest ice sheet on Earth more vulnerable to melting than thought}
+\end{tabular}
