new position update

--- a/Edwards-CV.tex
+++ b/Edwards-CV.tex
@@ -61,10 +61,10 @@
 \end{center}
 
 % ADDRESS, INFO
-\textbf{Postdoctoral Fellow, Lecturer} \hfill \href{https://grahamedwards.github.io}{grahamedwards.github.io} \\
-Earth Sciences, Physics \& Astronomy \hfill Graham.H.Edwards{\small @dartmouth.edu} \\
-Dartmouth College \hfill +1~920~559~2279  \\
-Hanover, NH, U.S.A.	\hfill \textit{Office:}~209 Fairchild Hall
+\textbf{Assistant Professor} \hfill \href{https://grahamedwards.github.io}{grahamedwards.github.io} \\
+Earth \& Environmental Geosciences \hfill gedward1~@~trinity.edu \\
+Trinity University \hfill +1~920~559~2279  \\
+San Antonio, TX, U.S.A.	\hfill 236 Marrs McLean Hall
 
 \vspace{1em}
 %-------------------------------------------
