--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -1,7 +1,9 @@
 \section*{APPOINTMENTS}
 
-\lineitem[Summer 2024\ongoing]{Trinity University}
+\lineitem[Fall 2024\ongoing]{Trinity University}
 \subline{Assistant Professor of Earth \& Environmental Geosciences}
+
+\vskip2ex
 
 \lineitem[2021 -- Summer 2024]{Dartmouth College}
 
@@ -10,8 +12,8 @@
 ``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
 
 ~~~Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth R. Newton (Physics \&\ Astronomy)
-
-%%%%-----------------------
-
 \subline[2023--24]{Lecturer} 
 Department of Physics \& Astronomy
+%%%%-----------------------
+
+
