--- a/sect/awards.tex
+++ b/sect/awards.tex
@@ -1,6 +1,7 @@
 \section*{AWARDS \& HONORS}
 
 \begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
+	2024 & A.~Lincoln~Washburn Award for Outstanding Mentoring, Dartmouth Earth Sciences\\
 	2020 & UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \\
 	2019 & Aaron and Elizabeth Waters Award ---  \textit{Issued annually for the most outstanding proposal for PhD research in the UCSC Department of Earth \& Planetary Sciences} \\
 	2014 & National Association of Geoscience Teachers Outstanding TA Award \\
