--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -1,6 +1,6 @@
 \section*{OUTREACH \& PUBLIC SERVICE}
 
-\lineitem[2022\ongoing]{Montshire Museum of Science}
+\lineitem[2022 -- 2024]{Montshire Museum of Science}
 \subline{Guest Scientist}
 \begin{itemize}
 \item Lead and assist educational activities within the museum.
