--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -2,15 +2,15 @@
 \lineitem{Dartmouth College}
 \subline{Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
-	Spring 2024 & Exploration of the Solar System (\emph{Instructor of Record})\\
-	Fall 2023 & Exploring the Universe (\emph{Instructor of Record})\\
+	Spring 2024 & Exploration of the Solar System \\
+	Fall 2023 & Exploring the Universe \\
 	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section (\emph{Co-Instructor})
 	\end{tabular}
 
 \subline{Guest Lecturer}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 	Winter 2024 & Astrobiology\\
-	Spring 2022 & Igneous and Metamorphic Petrology
+	Spring 2022--24 & Igneous and Metamorphic Petrology
 \end{tabular}
 
 \subline[2022 -- 2023]{Research Group Leader}
