--- a/sect/funding.tex
+++ b/sect/funding.tex
@@ -1,14 +1,12 @@
 \section*{FUNDING}
-\lineitem{Current~/~Active}
-\begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
-2021--24 & National Science Foundation --- Astronomy \&\ Astrophysics Postdoctoral Fellowship\\
-& \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591}{Award \#2102591} --- \$\,310,\,000
-\end{tabular}
+%\lineitem{Current~/~Active}
 
-\lineitem{Prior~/~Inactive}
-\begin{tabular}{@{}p{.1\linewidth} @{}p{.9\linewidth}} 
-    2020--21 & ARCS Foundation --- Scholar Award (Fellowship) \\
-2016--17 & University of California Santa Cruz  --- Regent's Fellowship \\
-2013 & Bowdoin College --- Grua/O'Connell Research Award  \\ 
-2012 & Bowdoin College --- Freedman Research Fellowship in Coastal/Environmental Studies \\
+%\lineitem{Prior~/~Inactive}
+\begin{tabular}{@{}p{.1\linewidth} p{0.1\linewidth} p{0.4\linewidth} @{}p{.4\linewidth}} 
+    %\bfseries Timeframe & \bfseries Amount & \bfseries Agency \\
+    2021--24 & \$310\,000 & National Science Foundation & \href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591}{Award~\#2102591}\\
+    2020--21 & \$10\,000 & ARCS Foundation & Scholar Award \\
+    2016--17 &  & University of California Santa Cruz  & Regent's (Graduate) Fellowship \\
+    2013 & \$2\,000 & Bowdoin College & Grua/O'Connell Research Award  \\ 
+    2012 & \$3\,700 & Bowdoin College & Freedman Research Fellowship \\
 \end{tabular}
