--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -12,7 +12,7 @@
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
     %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
     \item[\dots] \ghedwards, G. Piccione, T. Blackburn,  S. Tulaczyk. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \inreview{Chemical Geology}. EarthArXiv: \doi{10.31223/X5B991}
-    \item \ghedwards, C.B. Keller, E.R. Newton, C.W. Stewart*. 2024. An early giant planet instability recorded in asteroidal meteorites, \pub{Nature Astronomy}{1--13}. \doi{10.1038/s41550-024-02340-6}. \arxiv{2309.10906}. \press{https://astrobites.org/2023/09/25/meteorites-planet-migration/}{Astrobites}
+    \item \ghedwards, C.B. Keller, E.R. Newton, C.W. Stewart*. 2024. An early giant planet instability recorded in asteroidal meteorites, \pub{Nature Astronomy}{1--13}. \doi{10.1038/s41550-024-02340-6}. \arxiv{2309.10906}. \press{https://astrobites.org/2023/09/25/meteorites-planet-migration/}{Astrobites}.
     \item \ghedwards. 2024. Giant planets migrated shortly after the Solar System’s protoplanetary disk dispersed. \pub{Nature Astronomy} Research Briefing. \doi{10.1038/s41550-024-02341-5}
     \item R.~Rampalli*, M.K.~Ness, \ghedwards, E.R.~Newton, M.~Bedell. 2024. The Sun remains relatively refractory depleted: elemental abundances for $17,412$ Gaia RVS solar analogs and 50 planet hosts, \pub{The Astrophysical Journal}{965}. \doi{10.3847/1538-4357/ad303e}. \arxiv{2402.16954}.
     \item M.A.~Thompson, M.~Telus, \ghedwards, et al. 2023. Outgassing composition of the Murchison meteorite: implications for volatile depletion of planetesimals and interior-atmosphere connections for terrestrial exoplanets, \pub{Planetary Science Journal}{4}. \doi{10.3847/PSJ/acf760}. \arxiv{2310.02028}.
