add Trinity teaching, compact table formats

--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -16,7 +16,7 @@
 	Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
 \end{itemize}
 
-\lineitem[2019\ongoing]{Skype a Scientist}
+\lineitem[2019--2023]{Skype a Scientist}
 \subline{Volunteer Scientist}
 \begin{itemize}
 	\item Prepare educational content and host video calls with elementary and secondary school classrooms.
