--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,13 +1,19 @@
 \section*{TEACHING \&\ MENTORING}
+\lineitem{Trinity University}
+\subline{Courses Taught}
+\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
+	Fall 2024 & Global Climate Change
+\end{tabular}
+
 \lineitem{Dartmouth College}
-\subline{Lecturer}
+\subline{Courses Taught}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 	Spring 2024 & Exploration of the Solar System \\
 	Fall 2023 & Exploring the Universe \\
 	Fall 2023 & ``The Stretch'' (Field Camp) --- Glacial and climate history section (\emph{Co-Instructor})
-	\end{tabular}
+\end{tabular}
 
-\subline{Guest Lecturer}
+\subline{Guest Lectures}
 \begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
 	Winter 2024 & Astrobiology\\
 	Spring 2022--24 & Igneous and Metamorphic Petrology
@@ -27,10 +33,9 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 	2022\ongoing & Rayna Rampalli (PhD student)\\
 \end{tabular}
 \subline{Mentored Undergraduate Researchers}
-\begin{tabular}{ll}
-	2023 & Jack Duranceau (thesis 2023)\\
+\begin{tabular}{ll|ll}
+	2023 & Jack Duranceau (thesis 2023) & 2022 & Cameron Stewart\\
 	2023 & Chase Alvarado-Anderson (thesis 2023)\\
-	2022 & Cameron Stewart \\
 \end{tabular}
 
 \lineitem{University of California Santa Cruz}
@@ -44,19 +49,19 @@ Acting leader of a research group (4 graduate, 2 undergraduate students) in the 
 \end{tabular}
 
 \subline{Mentored Undergraduate Researchers}
-\begin{tabular}{ll}
-	2019--21 & Cosmo Varah-Sikes (thesis 2021)\\
-	2020 & Linh Phan \\
-	2018--20 & Michael Scudder (thesis 2020) \\
+\begin{tabular}{ll|ll}
+	2019--21 & Cosmo Varah-Sikes (thesis 2021) &
+	2018 & Frances O'Byrne\\
+	2020 & Linh Phan &
 	2018 & Alexander Levinson \\
-	2018 & Frances O'Byrne \\
+	2018--20 & Michael Scudder (thesis 2020) &
 	2017--18 & Paul Colosi
 \end{tabular}
 
 \lineitem{Bowdoin College \brunswick}
 \subline{Laboratory Teaching Assistant}
-\begin{tabular}{p{.15\linewidth} p{.85\linewidth}} %p columns set fixed width and allow text wrapping
-Fall 2012, 2013 & \textit{Investigating Earth}\\
+\begin{tabular}{ll|ll} %p columns set fixed width and allow text wrapping
+Fall 2012, 2013 & \textit{Investigating Earth}&
 Fall 2013 & \textit{Marine Biogeochemistry}
 \end{tabular}
 
@@ -64,5 +69,5 @@ Fall 2013 & \textit{Marine Biogeochemistry}
 \textit{Substitute Teacher}
 \begin{itemize}
 	\item Instructor and paraprofessional in K-12 classrooms.
-	\item Taught students with various educational needs in diverse subjects.
+	%Taught students with various educational needs in diverse subjects.
 \end{itemize}
