--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -1,6 +1,6 @@
 \section*{TEN SELECTED CONFERENCE ABSTRACTS}
 
-More comprehensive lists of abstracts are available on the \href{https://ui.adsabs.harvard.edu/public-libraries/-tel6KyoTUeLAGPFsPO0dQ}{Astrophysical Data System} or \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}.
+More comprehensive lists of abstracts are available on the \href{https://ui.adsabs.harvard.edu/search/q=author%3A%22Edwards%2C%20Graham%20Harper%22}{Astrophysical Data System} and \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}.
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
   
