--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -11,14 +11,24 @@
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
     %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
-    \item[\dots] \ghedwards, G. Piccione, T. Blackburn,  S. Tulaczyk. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \inreview{Chemical Geology}. EarthArXiv: \doi{10.31223/X5B991}
+    \item \ghedwards, G. Piccione, T. Blackburn,  S. Tulaczyk. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \inpress{Chemical Geology}. EarthArXiv: \doi{10.31223/X5B991}
+        
     \item \ghedwards, C.B. Keller, E.R. Newton, C.W. Stewart*. 2024. An early giant planet instability recorded in asteroidal meteorites, \pub{Nature Astronomy}{1--13}. \doi{10.1038/s41550-024-02340-6}. \arxiv{2309.10906}. \press{https://astrobites.org/2023/09/25/meteorites-planet-migration/}{Astrobites}.
+    
     \item \ghedwards. 2024. Giant planets migrated shortly after the Solar System’s protoplanetary disk dispersed. \pub{Nature Astronomy} Research Briefing. \doi{10.1038/s41550-024-02341-5}
+    
     \item R.~Rampalli*, M.K.~Ness, \ghedwards, E.R.~Newton, M.~Bedell. 2024. The Sun remains relatively refractory depleted: elemental abundances for $17,412$ Gaia RVS solar analogs and 50 planet hosts, \pub{The Astrophysical Journal}{965}. \doi{10.3847/1538-4357/ad303e}. \arxiv{2402.16954}.
+    
     \item M.A.~Thompson, M.~Telus, \ghedwards, et al. 2023. Outgassing composition of the Murchison meteorite: implications for volatile depletion of planetesimals and interior-atmosphere connections for terrestrial exoplanets, \pub{Planetary Science Journal}{4}. \doi{10.3847/PSJ/acf760}. \arxiv{2310.02028}.
+    
     \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. 2022. Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \pub{Science Advances}{8}. \doi{10.1126/sciadv.abp9329}.
+    
     \item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder*, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \pub{Nature}{583}. \doi{10.1038/s41586-020-2484-5}. \press{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}
+    
     \item \ghedwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \pub{Science Advances}{6}. \doi{10.1126/sciadv.aay8641}
+    
     \item \ghedwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \pub{Geology}{46}. \doi{10.1130/G45150.1} 
+    
     \item \ghedwards. 2014. Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a study of Late Holocene cirque glacier activity in Spitsbergen, Svalbard. [\textit{Honor’s Thesis}] Bowdoin College: Brunswick, ME, U.S.A. 73 pp. \href{https://digitalcommons.bowdoin.edu/honorsprojects/12/}{[Undergraduate Research Commons]}
+
 \end{etaremune}
