add taylor valley doi

--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -11,7 +11,7 @@
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
     %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
-    \item \ghedwards, G. Piccione, T. Blackburn,  S. Tulaczyk. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \inpress{Chemical Geology}. EarthArXiv: \doi{10.31223/X5B991}
+    \item \ghedwards, G. Piccione, T. Blackburn,  S. Tulaczyk. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \inpress{Chemical Geology}. \doi{10.1016/j.chemgeo.2024.122463}
         
     \item \ghedwards, C.B. Keller, E.R. Newton, C.W. Stewart*. 2024. An early giant planet instability recorded in asteroidal meteorites, \pub{Nature Astronomy}{1--13}. \doi{10.1038/s41550-024-02340-6}. \arxiv{2309.10906}. \press{https://astrobites.org/2023/09/25/meteorites-planet-migration/}{Astrobites}.
     
