remove seasons from appointments

--- a/sect/appointments.tex
+++ b/sect/appointments.tex
@@ -1,11 +1,11 @@
 \section*{APPOINTMENTS}
 
-\lineitem[Fall 2024\ongoing]{Trinity University}
+\lineitem[2024\ongoing]{Trinity University}
 \subline{Assistant Professor of Earth \& Environmental Geosciences}
 
 \vskip2ex
 
-\lineitem[2021 -- Summer 2024]{Dartmouth College}
+\lineitem[2021 -- 2024]{Dartmouth College}
 
 \subline{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
 
