add abuawad pre-print

--- a/sect/pubs.tex
+++ b/sect/pubs.tex
@@ -1,25 +1,27 @@
 \section*{PUBLICATIONS}
 \hfill* mentored student author
-\newcommand{\inprep}[1]{in prep, \textit{#1}}
-\newcommand{\submitted}[1]{submitted, \textit{#1}}
-\newcommand{\inreview}[1]{in review, \textit{#1}}
-\newcommand{\inpress}[1]{in press, \textit{#1}}
-\newcommand{\doi}[1]{\href{https://doi.org/#1}{doi:~#1}}
+\newcommand{\inprep}[1]{\textit{#1} [in prep.]}
+\newcommand{\submitted}[1]{\textit{#1} [submitted]}
+\newcommand{\inreview}[1]{\textit{#1} [in review]}
+\newcommand{\inpress}[1]{\textit{#1} [in press]}
+\newcommand{\doi}[1]{\href{https://doi.org/#1}{doi:#1}}
 \newcommand{\arxiv}[1]{\href{https://arxiv.org/abs/#1}{\texttt{arXiv:#1}}}
 \newcommand{\press}[2]{\textbf{Press:}~\href{#1}{#2}}
 \newcommand{\pub}[2]{\textit{#1},~#2}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
     %\item[\dots] \ghedwards, G. Piccione, M. Gomez. Viewership patterns of a virtual geoscience outreach program. \inprep{Journal of Geoscience Education}.
-    \item \ghedwards, G.G.~Piccione, T.~Blackburn,  S.~Tulaczyk. 2025. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica, \pub{Chemical Geology}{671}. \doi{10.1016/j.chemgeo.2024.122463}
+    \item[\dots] A.~Abuawad, M.~Griffiths, \ghedwards, A.~Eftekhari, M.~El-Ebweini, H.~Al-Najar, A.~Butmeh, R.~Abu~Dayyeh, M.~Al-Shewy, A.~Aker. From ecocide to genocide: a call to action for scientists globally to address the destruction in Gaza. \submitted{Environmental Health Perspectives}. Preprint:~\doi{10.2139/ssrn.5021472}
+ 
+    \item \ghedwards, G.G.~Piccione, T.~Blackburn,  S.~Tulaczyk. 2025. Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica. \pub{Chemical Geology}{671}. \doi{10.1016/j.chemgeo.2024.122463}
         
-    \item \ghedwards, C.B.~Keller, E.R.~Newton, C.W.~Stewart*. 2024. An early giant planet instability recorded in asteroidal meteorites, \pub{Nature Astronomy}{1--13}. \doi{10.1038/s41550-024-02340-6}. \arxiv{2309.10906}. \press{https://astrobites.org/2023/09/25/meteorites-planet-migration/}{Astrobites}.
+    \item \ghedwards, C.B.~Keller, E.R.~Newton, C.W.~Stewart*. 2024. An early giant planet instability recorded in asteroidal meteorites. \pub{Nature Astronomy}{1--13}. \doi{10.1038/s41550-024-02340-6}. \arxiv{2309.10906}. \press{https://astrobites.org/2023/09/25/meteorites-planet-migration/}{Astrobites}.
     
     \item \ghedwards. 2024. Giant planets migrated shortly after the Solar System’s protoplanetary disk dispersed. \pub{Nature Astronomy} Research Briefing. \doi{10.1038/s41550-024-02341-5}
     
-    \item R.~Rampalli*, M.K.~Ness, \ghedwards, E.R.~Newton, M.~Bedell. 2024. The Sun remains relatively refractory depleted: elemental abundances for $17,412$ Gaia RVS solar analogs and 50 planet hosts, \pub{The Astrophysical Journal}{965}. \doi{10.3847/1538-4357/ad303e}. \arxiv{2402.16954}.
+    \item R.~Rampalli*, M.K.~Ness, \ghedwards, E.R.~Newton, M.~Bedell. 2024. The Sun remains relatively refractory depleted: elemental abundances for $17,412$ Gaia RVS solar analogs and 50 planet hosts. \pub{The Astrophysical Journal}{965}. \doi{10.3847/1538-4357/ad303e}. \arxiv{2402.16954}.
     
-    \item M.A.~Thompson, M.~Telus, \ghedwards, et al. 2023. Outgassing composition of the Murchison meteorite: implications for volatile depletion of planetesimals and interior-atmosphere connections for terrestrial exoplanets, \pub{Planetary Science Journal}{4}. \doi{10.3847/PSJ/acf760}. \arxiv{2310.02028}.
+    \item M.A.~Thompson, M.~Telus, \ghedwards, et al. 2023. Outgassing composition of the Murchison meteorite: implications for volatile depletion of planetesimals and interior-atmosphere connections for terrestrial exoplanets. \pub{Planetary Science Journal}{4}. \doi{10.3847/PSJ/acf760}. \arxiv{2310.02028}.
     
     \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. 2022. Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \pub{Science Advances}{8}. \doi{10.1126/sciadv.abp9329}.
     
